--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,13 +1,8 @@
-﻿@model LabHelloMvc.Models.Person
-
-@{
+﻿@{
     ViewData["Title"] = "Home Page";
 }
 
-<div>
-	<h1>Person</h1>
-	<p>
-		@Model.FirstName<br/>
-		@Model.LastName<br/>
-	</p>
+<div class="text-center">
+    <h1 class="display-4">Welcome</h1>
+    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
